@@ -2,5 +2,43 @@
   I tried something with IThemeSpecific but failed.
 
 - Make email address case insensitive: you should always use lower
-  case.
+  case.  Preferably all combinations should work, though we should
+  probably convert everything to lowercase anyway.  Lowercase should
+  at least always work.  What should work:
 
+ - Registered with mixed case:
+   - password reset via email:
+     - lower case: works
+     - mixed case: works
+     - upper case: works
+   - login:
+     - lower case: FAILS
+       after getMemberByLoginName/authenticateCredentials change: STILL FAILS
+     - mixed case: works
+     - upper case: FAILS
+       after getMemberByLoginName/authenticateCredentials change: STILL FAILS
+   - change email in preferences and login with that new email:
+     - lower case: works
+     - mixed case: works
+     - upper case: works
+   - login with your original user id (email) after the change:
+     - FAILS
+   - Manager changes your email in preferences:
+     - FAILS: login name is not changed as well.
+
+ - Registered with LOWER case:
+   - password reset via email:
+     - lower case: works
+     - upper case: works
+   - login:
+     - lower case: works
+     - upper case: FAILS
+       after getMemberByLoginName/authenticateCredentials change: NOW WORKS
+   - change email in preferences and try login with that new email:
+     - lower case: works
+     - upper case: works
+   - login with your original user id (email) after the change:
+     - lower case: FAILS
+       after getMemberByLoginName/authenticateCredentials change: STILL FAILS
+   - Manager changes your email in preferences:
+     - FAILS: login name is not changed as well.
